# PythonRequest

./: .gitignore  CMakeLists.txt  README.md
python_funcs/: add.py  addThree.py  metaData.json
src/: CMakeLists.txt  main.cpp
src/pythonWrapper/: a.out  pythonOne.cpp
